# fishing_predictor

./: .env.example  .gitignore  DEVELOPMENT_GUIDELINES.md  README.md  __init__.py  analisis_completo.py  analisis_optimizado.py  analisis_real.py  analizar_tramo.py  config.py  domain.py  encuesta_pesca.html  encuesta_pesca_offline.html  environment.yml  fishing_analysis.ipynb  investigacion.md  main.py  mapa_pesca_offline.html  pyproject.toml  requirements.txt
controllers/: __init__.py  analysis.py
core/: __init__.py  coastline.py  coastline_pipeline.py  coastline_real.py  coastline_refiner.py  coastline_sam.py  coastline_validator.py  copernicus_data_provider.py  fish_movement.py  fishing_optimizer.py  marine_data.py  scoring.py  transects.py  verification_image.py  visualization.py  weather_solunar.py
data/: __init__.py  consolidator.py  data_config.py  data_manager.py  encuestas_pesca.json  manifest.py  multi_source_fetcher.py
docs/: ANEXO_V7_INTEGRACION_AVANZADA.md  DATA_SOURCES.md  ENCUESTA_PESCADORES.md  INVESTIGACION_CV_ESTADO_DEL_ARTE.md  PLAN_UI_REFACTORING.md  PLAN_V1_ARQUITECTURA_DATOS.md  PLAN_V2_VALIDACION_CIENTIFICA.md  PLAN_V3_IMPLEMENTACION_MEJORAS.md  PLAN_V4_INTEGRACION_DATOS.md  PLAN_V5_LINEA_COSTERA_PRECISA.md  PLAN_V6_PROXIMOS_PASOS.md  PLAN_V8_CV_ACTUALIZADO.md  PLAN_V8_VISION_COMPUTACIONAL_BATIMETRIA.md  PROGRESO_COASTLINE_FIX.md  TARJETA_ENCUESTA_RAPIDA.md  index.html  oceanographic_data_sources.md
models/: __init__.py  anchovy_migration.py  features.py  prediction.py  predictor.py  scoring.py  timeline.py
processing/: __init__.py  (+3 more)
(+101 files in other folders)
